--- a/report/newsletter_InfoDenguev2_01.tex
+++ b/report/newsletter_InfoDenguev2_01.tex
@@ -34,7 +34,7 @@
 %	CAIXA LATERAL - PRIMEIRA PAGINA
 %--------------------------------------------------------------------------------
 
-% Carregando dados para a primeira pagina
+% Carregando dados  (atualmente é manual para cada estado)
 
 
 \begin{minipage}[t]{.30\linewidth} % Mini page taking up 30% of the actual page
@@ -44,7 +44,7 @@
 
 \hypertarget{contents}{\textbf{{\large Boletim Semanal}}} 
 
-\textbf{Semana 13 de 2016} % se, ano, em pp.RData
+\textbf{Semana 14 de 2016} % se, ano, em pp.RData
 
 \begin{itemize}
 \item \hyperlink{estado}{O Estado} 
@@ -54,14 +54,15 @@
 \textbf{Regionais de Saúde:}
 
 
-\begin{itemize}\item \hyperlink{MetI}{Metropolitana I}
-\item \hyperlink{MetII}{Metropolitana II}
-\item \hyperlink{MedPar}{Médio Paraíba}
-\item \hyperlink{CSul}{Centro Sul}
-\item \hyperlink{Serra}{Serrana}
-\item \hyperlink{BaixLit}{Baixada Litorânea}
-\item \hyperlink{Norte}{Norte}
-\item \hyperlink{Nord}{Nordeste}\end{itemize}
+\begin{itemize}\item \hyperlink{MtrI}{Metropolitana I}
+\item \hyperlink{MtII}{Metropolitana II}
+\item \hyperlink{LtrS}{Litoral Sul}
+\item \hyperlink{MéP}{Médio Paraíba}
+\item \hyperlink{CntS}{Centro Sul}
+\item \hyperlink{Srrn}{Serrana}
+\item \hyperlink{BLâ}{Baixada Litorânea}
+\item \hyperlink{Nort}{Norte}
+\item \hyperlink{Nrst}{Noroeste}\end{itemize}
 \centerline {\rule{.75\linewidth}{.25pt}} % Horizontal line
 
 %-----------------------------------------------------------
@@ -88,13 +89,13 @@
 %-------------------------------------------------------------------------------
 \hypertarget{titulo}{\heading{Situação da Dengue no Estado do Rio de Janeiro}{6pt}} % \hypertarget provides a label to reference using 
 
-Desde o início do ano, 5420 casos foram registrados no estado, sendo 350 na última semana. A figura abaixo mostra as condições de transmissão em cada município.
+Desde o início do ano, 16098 casos foram registrados no estado, sendo 1905 na última semana. A figura abaixo mostra as condições de transmissão em cada município.
 
 % Mapa estadual
 \includegraphics[width=0.8\textwidth]{RJ/figs/Mapa_ERJ.png}
 %-----------------------------------------------------------
 
-Dos 92 municipios, 10 encontram-se em nivel verde, 20 em nivel amarelo, 30 em nivel laranja e 1 em nivel vermelho referentes a semana epidemiológica 13-2016. Para informações mais atualizadas
+Dos 92 municipios, 0 encontram-se em nivel verde, 9 em nivel amarelo, 3 em nivel laranja e 0 em nivel vermelho referentes a semana epidemiológica 14-2016. Para informações mais atualizadas
 sobre o município do Rio de Janeiro ter acesso ao mapa interativo do estado consultar em \href{http://info.dengue.mat.br}{\textit{Info Dengue}}.
 
 
@@ -114,7 +115,7 @@ As cores indicam niveis de atenção
 \end{description}
 \end{mdframed}
 
-\textbf{Na semana passada:} 10 municípios em nivel amarelo, 30 em laranja e 10 em vermelho.    
+ \textbf{Na semana passada:} 8 municípios em nivel amarelo, 4 em laranja e 0 em vermelho.    
 
 \end{minipage} % End the main body - first page mini page
 
@@ -124,182 +125,22 @@ As cores indicam niveis de atenção
 %----------------------------------------------------------------------------------
 
 \begin{minipage}[t]{.66\linewidth}
-\hypertarget{MetI}{\heading{Regional Metropolitana I}}
-\includegraphics[width=0.8\textwidth]{RJ/figs/mapaRJ_Metropolitana I.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas.}\begin{center}
+\hypertarget{ MtrI }{\heading{Regional  Metropolitana I }}
+\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas.}\begin{center}
 % latex table generated in R 3.2.5 by xtable 1.8-2 package
-% Tue Apr 26 14:26:04 2016
-\begin{tabular}{rrr}
+% Tue Apr 26 18:22:53 2016
+\begin{tabular}{rrrrrrr}
   \hline
-1 & 2 & 3 \\ 
+1 & 2 & 3 & 4 & 5 & 6 & 7 \\ 
   \hline
-1.00 & 2.00 & 4.00 \\ 
-  3.00 & 4.00 & 5.00 \\ 
-  3.00 & 4.00 & 5.00 \\ 
+  1 &   2 &   3 &   4 &   5 &   6 &   7 \\ 
+   10 &  11 &  12 &  13 &  14 &  15 &  16 \\ 
    \hline
 \end{tabular}
 \end{center}
 \end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
 \begin{mdframed}[style=sidebar,frametitle={}]
-\textbf{Municipios}\begin{itemize}\item \hyperlink{Rio}{Rio de Janeiro}
-\item \hyperlink{Mag}{Magé}
-\item \hyperlink{SGoncalo}{São Gonçalo}
-\item \hyperlink{SJMeriti}{São João de Meriti}
-\item \hyperlink{Niguacu}{Nova Iguaçu}
-\end{itemize}\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
-\hypertarget{MetII}{\heading{Regional Metropolitana II}}
-\includegraphics[width=0.8\textwidth]{RJ/figs/mapaRJ_Metropolitana II.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas.}\begin{center}
-% latex table generated in R 3.2.5 by xtable 1.8-2 package
-% Tue Apr 26 14:26:04 2016
-\begin{tabular}{rrr}
-  \hline
-1 & 2 & 3 \\ 
-  \hline
-1.00 & 2.00 & 4.00 \\ 
-  3.00 & 4.00 & 5.00 \\ 
-  3.00 & 4.00 & 5.00 \\ 
-   \hline
-\end{tabular}
-\end{center}
-\end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
-\begin{mdframed}[style=sidebar,frametitle={}]
-\textbf{Municipios}\begin{itemize}\item \hyperlink{Rio}{Rio de Janeiro}
-\item \hyperlink{Mag}{Magé}
-\item \hyperlink{SGoncalo}{São Gonçalo}
-\item \hyperlink{SJMeriti}{São João de Meriti}
-\item \hyperlink{Niguacu}{Nova Iguaçu}
-\end{itemize}\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
-\hypertarget{MedPar}{\heading{Regional Médio Paraíba}}
-\includegraphics[width=0.8\textwidth]{RJ/figs/mapaRJ_Médio Paraíba.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas.}\begin{center}
-% latex table generated in R 3.2.5 by xtable 1.8-2 package
-% Tue Apr 26 14:26:04 2016
-\begin{tabular}{rrr}
-  \hline
-1 & 2 & 3 \\ 
-  \hline
-1.00 & 2.00 & 4.00 \\ 
-  3.00 & 4.00 & 5.00 \\ 
-  3.00 & 4.00 & 5.00 \\ 
-   \hline
-\end{tabular}
-\end{center}
-\end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
-\begin{mdframed}[style=sidebar,frametitle={}]
-\textbf{Municipios}\begin{itemize}\item \hyperlink{Rio}{Rio de Janeiro}
-\item \hyperlink{Mag}{Magé}
-\item \hyperlink{SGoncalo}{São Gonçalo}
-\item \hyperlink{SJMeriti}{São João de Meriti}
-\item \hyperlink{Niguacu}{Nova Iguaçu}
-\end{itemize}\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
-\hypertarget{CSul}{\heading{Regional Centro Sul}}
-\includegraphics[width=0.8\textwidth]{RJ/figs/mapaRJ_Centro Sul.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas.}\begin{center}
-% latex table generated in R 3.2.5 by xtable 1.8-2 package
-% Tue Apr 26 14:26:04 2016
-\begin{tabular}{rrr}
-  \hline
-1 & 2 & 3 \\ 
-  \hline
-1.00 & 2.00 & 4.00 \\ 
-  3.00 & 4.00 & 5.00 \\ 
-  3.00 & 4.00 & 5.00 \\ 
-   \hline
-\end{tabular}
-\end{center}
-\end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
-\begin{mdframed}[style=sidebar,frametitle={}]
-\textbf{Municipios}\begin{itemize}\item \hyperlink{Rio}{Rio de Janeiro}
-\item \hyperlink{Mag}{Magé}
-\item \hyperlink{SGoncalo}{São Gonçalo}
-\item \hyperlink{SJMeriti}{São João de Meriti}
-\item \hyperlink{Niguacu}{Nova Iguaçu}
-\end{itemize}\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
-\hypertarget{Serra}{\heading{Regional Serrana}}
-\includegraphics[width=0.8\textwidth]{RJ/figs/mapaRJ_Serrana.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas.}\begin{center}
-% latex table generated in R 3.2.5 by xtable 1.8-2 package
-% Tue Apr 26 14:26:04 2016
-\begin{tabular}{rrr}
-  \hline
-1 & 2 & 3 \\ 
-  \hline
-1.00 & 2.00 & 4.00 \\ 
-  3.00 & 4.00 & 5.00 \\ 
-  3.00 & 4.00 & 5.00 \\ 
-   \hline
-\end{tabular}
-\end{center}
-\end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
-\begin{mdframed}[style=sidebar,frametitle={}]
-\textbf{Municipios}\begin{itemize}\item \hyperlink{Rio}{Rio de Janeiro}
-\item \hyperlink{Mag}{Magé}
-\item \hyperlink{SGoncalo}{São Gonçalo}
-\item \hyperlink{SJMeriti}{São João de Meriti}
-\item \hyperlink{Niguacu}{Nova Iguaçu}
-\end{itemize}\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
-\hypertarget{BaixLit}{\heading{Regional Baixada Litorânea}}
-\includegraphics[width=0.8\textwidth]{RJ/figs/mapaRJ_Baixada Litorânea.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas.}\begin{center}
-% latex table generated in R 3.2.5 by xtable 1.8-2 package
-% Tue Apr 26 14:26:05 2016
-\begin{tabular}{rrr}
-  \hline
-1 & 2 & 3 \\ 
-  \hline
-1.00 & 2.00 & 4.00 \\ 
-  3.00 & 4.00 & 5.00 \\ 
-  3.00 & 4.00 & 5.00 \\ 
-   \hline
-\end{tabular}
-\end{center}
-\end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
-\begin{mdframed}[style=sidebar,frametitle={}]
-\textbf{Municipios}\begin{itemize}\item \hyperlink{Rio}{Rio de Janeiro}
-\item \hyperlink{Mag}{Magé}
-\item \hyperlink{SGoncalo}{São Gonçalo}
-\item \hyperlink{SJMeriti}{São João de Meriti}
-\item \hyperlink{Niguacu}{Nova Iguaçu}
-\end{itemize}\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
-\hypertarget{Norte}{\heading{Regional Norte}}
-\includegraphics[width=0.8\textwidth]{RJ/figs/mapaRJ_Norte.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas.}\begin{center}
-% latex table generated in R 3.2.5 by xtable 1.8-2 package
-% Tue Apr 26 14:26:05 2016
-\begin{tabular}{rrr}
-  \hline
-1 & 2 & 3 \\ 
-  \hline
-1.00 & 2.00 & 4.00 \\ 
-  3.00 & 4.00 & 5.00 \\ 
-  3.00 & 4.00 & 5.00 \\ 
-   \hline
-\end{tabular}
-\end{center}
-\end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
-\begin{mdframed}[style=sidebar,frametitle={}]
-\textbf{Municipios}\begin{itemize}\item \hyperlink{Rio}{Rio de Janeiro}
-\item \hyperlink{Mag}{Magé}
-\item \hyperlink{SGoncalo}{São Gonçalo}
-\item \hyperlink{SJMeriti}{São João de Meriti}
-\item \hyperlink{Niguacu}{Nova Iguaçu}
-\end{itemize}\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
-\hypertarget{Nord}{\heading{Regional Nordeste}}
-\includegraphics[width=0.8\textwidth]{RJ/figs/mapaRJ_Nordeste.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas.}\begin{center}
-% latex table generated in R 3.2.5 by xtable 1.8-2 package
-% Tue Apr 26 14:26:05 2016
-\begin{tabular}{rrr}
-  \hline
-1 & 2 & 3 \\ 
-  \hline
-1.00 & 2.00 & 4.00 \\ 
-  3.00 & 4.00 & 5.00 \\ 
-  3.00 & 4.00 & 5.00 \\ 
-   \hline
-\end{tabular}
-\end{center}
-\end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
-\begin{mdframed}[style=sidebar,frametitle={}]
-\textbf{Municipios}\begin{itemize}\item \hyperlink{Rio}{Rio de Janeiro}
-\item \hyperlink{Mag}{Magé}
-\item \hyperlink{SGoncalo}{São Gonçalo}
-\item \hyperlink{SJMeriti}{São João de Meriti}
-\item \hyperlink{Niguacu}{Nova Iguaçu}
-\end{itemize}\end{mdframed}\hfill\end{minipage}\newpage
+\textbf{Municipios}\end{mdframed}\hfill\end{minipage}\newpage
 
 %-----------------------------------------------------------------------------------%	MAIN BODY - THIRD PAGE
 %-----------------------------------------------------------------------------------
