--- a/report/newsletter_InfoDenguev2_01.tex
+++ b/report/newsletter_InfoDenguev2_01.tex
@@ -126,9 +126,9 @@ As cores indicam niveis de atenção
 
 \begin{minipage}[t]{.66\linewidth}
 \hypertarget{ MtrI }{\heading{Regional  Metropolitana I }}
-\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas.}\begin{center}
+\includegraphics[width=0.8\textwidth]{RJ/figs/Mapa_MetropolitanaI.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas.}\begin{center}
 % latex table generated in R 3.2.5 by xtable 1.8-2 package
-% Tue Apr 26 18:22:53 2016
+% Wed Apr 27 17:14:48 2016
 \begin{tabular}{rrrrrrr}
   \hline
 1 & 2 & 3 & 4 & 5 & 6 & 7 \\ 
@@ -140,7 +140,227 @@ As cores indicam niveis de atenção
 \end{center}
 \end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
 \begin{mdframed}[style=sidebar,frametitle={}]
-\textbf{Municipios}\end{mdframed}\hfill\end{minipage}\newpage
+\textbf{Municipios}\begin{itemize}\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3300456}{Belford Roxo}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3301702}{Duque de Caxias}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3302007}{Itaguaí}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3302270}{Japeri}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3302502}{Magé}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3302858}{Mesquita}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3303203}{Nilópolis}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3303500}{Nova Iguaçu}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3304144}{Queimados}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3304557}{Rio de Janeiro}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3305109}{São João de Meriti}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3305554}{Seropédica}
+\end{itemize}\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
+\hypertarget{ MtII }{\heading{Regional  Metropolitana II }}
+\includegraphics[width=0.8\textwidth]{RJ/figs/Mapa_MetropolitanaII.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas.}\begin{center}
+% latex table generated in R 3.2.5 by xtable 1.8-2 package
+% Wed Apr 27 17:14:48 2016
+\begin{tabular}{rrrrrrr}
+  \hline
+1 & 2 & 3 & 4 & 5 & 6 & 7 \\ 
+  \hline
+  1 &   2 &   3 &   4 &   5 &   6 &   7 \\ 
+   10 &  11 &  12 &  13 &  14 &  15 &  16 \\ 
+   \hline
+\end{tabular}
+\end{center}
+\end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
+\begin{mdframed}[style=sidebar,frametitle={}]
+\textbf{Municipios}\begin{itemize}\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3301900}{Itaboraí}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3302700}{Maricá}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3303302}{Niterói}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3304300}{Rio Bonito}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3304904}{São Gonçalo}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3305604}{Silva Jardim}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3305752}{Tanguá}
+\end{itemize}\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
+\hypertarget{ LtrS }{\heading{Regional  Litoral Sul }}
+\includegraphics[width=0.8\textwidth]{RJ/figs/Mapa_LitoralSul.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas.}\begin{center}
+% latex table generated in R 3.2.5 by xtable 1.8-2 package
+% Wed Apr 27 17:14:48 2016
+\begin{tabular}{rrrrrrr}
+  \hline
+1 & 2 & 3 & 4 & 5 & 6 & 7 \\ 
+  \hline
+  1 &   2 &   3 &   4 &   5 &   6 &   7 \\ 
+   10 &  11 &  12 &  13 &  14 &  15 &  16 \\ 
+   \hline
+\end{tabular}
+\end{center}
+\end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
+\begin{mdframed}[style=sidebar,frametitle={}]
+\textbf{Municipios}\begin{itemize}\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3300100}{Angra dos Reis}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3302601}{Mangaratiba}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3303807}{Paraty}
+\end{itemize}\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
+\hypertarget{ MéP }{\heading{Regional  Médio Paraíba }}
+\includegraphics[width=0.8\textwidth]{RJ/figs/Mapa_MédioParaíba.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas.}\begin{center}
+% latex table generated in R 3.2.5 by xtable 1.8-2 package
+% Wed Apr 27 17:14:48 2016
+\begin{tabular}{rrrrrrr}
+  \hline
+1 & 2 & 3 & 4 & 5 & 6 & 7 \\ 
+  \hline
+  1 &   2 &   3 &   4 &   5 &   6 &   7 \\ 
+   10 &  11 &  12 &  13 &  14 &  15 &  16 \\ 
+   \hline
+\end{tabular}
+\end{center}
+\end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
+\begin{mdframed}[style=sidebar,frametitle={}]
+\textbf{Municipios}\begin{itemize}\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3302254}{Itatiaia}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3304201}{Resende}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3304110}{Porto Real}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3304128}{Quatis}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3300407}{Barra Mansa}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3306305}{Volta Redonda}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3304409}{Rio Claro}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3304508}{Rio das Flores}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3306107}{Valença}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3300308}{Barra do Piraí}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3303955}{Pinheiral}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3304003}{Piraí}
+\end{itemize}\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
+\hypertarget{ CntS }{\heading{Regional  Centro Sul }}
+\includegraphics[width=0.8\textwidth]{RJ/figs/Mapa_CentroSul.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas.}\begin{center}
+% latex table generated in R 3.2.5 by xtable 1.8-2 package
+% Wed Apr 27 17:14:48 2016
+\begin{tabular}{rrrrrrr}
+  \hline
+1 & 2 & 3 & 4 & 5 & 6 & 7 \\ 
+  \hline
+  1 &   2 &   3 &   4 &   5 &   6 &   7 \\ 
+   10 &  11 &  12 &  13 &  14 &  15 &  16 \\ 
+   \hline
+\end{tabular}
+\end{center}
+\end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
+\begin{mdframed}[style=sidebar,frametitle={}]
+\textbf{Municipios}\begin{itemize}\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3303609}{Paracambi}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3302809}{Mendes}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3301801}{Engenheiro Paulo de Frontin}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3302908}{Miguel Pereira}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3306206}{Vassouras}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3303856}{Paty do Alferes}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3303708}{Paraíba do Sul}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3300951}{Comendador Levy Gasparian}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3306008}{Três Rios}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3300225}{Areal}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3305406}{Sapucaia}
+\end{itemize}\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
+\hypertarget{ Srrn }{\heading{Regional  Serrana }}
+\includegraphics[width=0.8\textwidth]{RJ/figs/Mapa_Serrana.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas.}\begin{center}
+% latex table generated in R 3.2.5 by xtable 1.8-2 package
+% Wed Apr 27 17:14:48 2016
+\begin{tabular}{rrrrrrr}
+  \hline
+1 & 2 & 3 & 4 & 5 & 6 & 7 \\ 
+  \hline
+  1 &   2 &   3 &   4 &   5 &   6 &   7 \\ 
+   10 &  11 &  12 &  13 &  14 &  15 &  16 \\ 
+   \hline
+\end{tabular}
+\end{center}
+\end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
+\begin{mdframed}[style=sidebar,frametitle={}]
+\textbf{Municipios}\begin{itemize}\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3303906}{Petrópolis}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3305802}{Teresópolis}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3305158}{São José do Vale do Rio Preto}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3305703}{Sumidouro}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3303401}{Nova Friburgo}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3300506}{Bom Jardim}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3301108}{Cantagalo}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3301207}{Carmo}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3301603}{Duas Barras}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3302452}{Macuco}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3301504}{Cordeiro}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3305901}{Trajano de Moraes}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3304607}{Santa Maria Madalena}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3305307}{São Sebastião do Alto}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3301850}{Guapimirim}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3300803}{Cachoeiras de Macacu}
+\end{itemize}\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
+\hypertarget{ BLâ }{\heading{Regional  Baixada Litorânea }}
+\includegraphics[width=0.8\textwidth]{RJ/figs/Mapa_BaixadaLitorânea.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas.}\begin{center}
+% latex table generated in R 3.2.5 by xtable 1.8-2 package
+% Wed Apr 27 17:14:48 2016
+\begin{tabular}{rrrrrrr}
+  \hline
+1 & 2 & 3 & 4 & 5 & 6 & 7 \\ 
+  \hline
+  1 &   2 &   3 &   4 &   5 &   6 &   7 \\ 
+   10 &  11 &  12 &  13 &  14 &  15 &  16 \\ 
+   \hline
+\end{tabular}
+\end{center}
+\end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
+\begin{mdframed}[style=sidebar,frametitle={}]
+\textbf{Municipios}\begin{itemize}\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3300209}{Araruama}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3300233}{Armação dos Búzios}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3300258}{Arraial do Cabo}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3300704}{Cabo Frio}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3301306}{Casimiro de Abreu}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3301876}{Iguaba Grande}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3304524}{Rio das Ostras}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3305208}{São Pedro da Aldeia}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3305505}{Saquarema}
+\end{itemize}\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
+\hypertarget{ Nort }{\heading{Regional  Norte }}
+\includegraphics[width=0.8\textwidth]{RJ/figs/Mapa_Norte.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas.}\begin{center}
+% latex table generated in R 3.2.5 by xtable 1.8-2 package
+% Wed Apr 27 17:14:48 2016
+\begin{tabular}{rrrrrrr}
+  \hline
+1 & 2 & 3 & 4 & 5 & 6 & 7 \\ 
+  \hline
+  1 &   2 &   3 &   4 &   5 &   6 &   7 \\ 
+   10 &  11 &  12 &  13 &  14 &  15 &  16 \\ 
+   \hline
+\end{tabular}
+\end{center}
+\end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
+\begin{mdframed}[style=sidebar,frametitle={}]
+\textbf{Municipios}\begin{itemize}\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3302403}{Macaé}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3301405}{Conceição de Macabu}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3300936}{Carapebus}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3304151}{Quissamã}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3304805}{São Fidélis}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3301009}{Campos dos Goytacazes}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3305000}{São João da Barra}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3304755}{São Francisco de Itabapoana}
+\end{itemize}\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
+\hypertarget{ Nrst }{\heading{Regional  Noroeste }}
+\includegraphics[width=0.8\textwidth]{RJ/figs/Mapa_Noroeste.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas.}\begin{center}
+% latex table generated in R 3.2.5 by xtable 1.8-2 package
+% Wed Apr 27 17:14:48 2016
+\begin{tabular}{rrrrrrr}
+  \hline
+1 & 2 & 3 & 4 & 5 & 6 & 7 \\ 
+  \hline
+  1 &   2 &   3 &   4 &   5 &   6 &   7 \\ 
+   10 &  11 &  12 &  13 &  14 &  15 &  16 \\ 
+   \hline
+\end{tabular}
+\end{center}
+\end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
+\begin{mdframed}[style=sidebar,frametitle={}]
+\textbf{Municipios}\begin{itemize}\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3300159}{Aperibé}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3300605}{Bom Jesus do Itabapoana}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3300902}{Cambuci}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3302056}{Italva}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3302106}{Itaocara}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3302205}{Itaperuna}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3302304}{Laje do Muriaé}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3303005}{Miracema}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3303104}{Natividade}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3304102}{Porciúncula}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3304706}{Santo Antônio de Pádua}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3305133}{São José de Ubá}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3306156}{Varre-Sai}
+\item \hyperlink{https:/alerta.dengue.mat.br/alerta/3301157}{Cardoso Moreira}
+\end{itemize}\end{mdframed}\hfill\end{minipage}\newpage
 
 %-----------------------------------------------------------------------------------%	MAIN BODY - THIRD PAGE
 %-----------------------------------------------------------------------------------
