--- a/report/newsletter_InfoDenguev2_01.tex
+++ b/report/newsletter_InfoDenguev2_01.tex
@@ -19,7 +19,7 @@
 % Carregando dados  (atualmente é manual para cada estado)
 
 \fancyfoot[C]{Boletim Estadual - Rio de Janeiro}
-\fancyfoot[R]{Semana 13 de 2016}
+\fancyfoot[R]{Semana 14 de 2016}
 \fancyfoot[L]{\href{http://info.dengue.mat.br}{InfoDengue}}
 
 \usepackage{Sweave}
@@ -47,7 +47,7 @@
 
 \hypertarget{contents}{\textbf{{\large Boletim Semanal}}} 
 
-\textbf{Semana 13 de 2016} % se, ano, em pp.RData
+\textbf{Semana 14 de 2016} % se, ano, em pp.RData
 
 \begin{itemize}
 \item \hyperlink{estado}{O Estado} 
@@ -76,7 +76,7 @@
 
 %-----------------------------------------------------------
 
-\hyperlink{vartab}{Variáves nas Tabelas}
+\hyperlink{vartab}{Variáveis nas Tabelas}
 
 \hyperlink{notas}{Notas} % These link to their appropriate sections in the newsletter
 
@@ -98,13 +98,13 @@
 %-------------------------------------------------------------------------------
 \hypertarget{estado}{\heading{Situação da Dengue no Estado do Rio de Janeiro}{6pt}} % \hypertarget provides a label to reference using 
 
-Desde o início do ano, 43785 casos foram registrados no estado, sendo 2763 na última semana. A figura abaixo mostra as condições de transmissão em cada município.
+Desde o início do ano, 50707 casos foram registrados no estado, sendo 1983 na última semana. A figura abaixo mostra as condições de transmissão em cada município.
 
 % Mapa estadual
 \includegraphics[width=0.8\textwidth]{RJ/figs/Mapa_ERJ.png}
 %-----------------------------------------------------------
 
-Dos 92 municipios, 3 encontram-se em nivel verde, 4 em nivel amarelo, 3 em nivel laranja e 3 em nivel vermelho referentes a semana epidemiológica 13-2016. Para informações mais atualizadas
+Dos 92 municipios, 8 encontram-se em nivel verde, 72 em nivel amarelo, 3 em nivel laranja e 9 em nivel vermelho referentes a semana epidemiológica 14-2016. Para informações mais atualizadas
 sobre o município do Rio de Janeiro ter acesso ao mapa interativo do estado consultar em \href{http://info.dengue.mat.br}{\textit{Info Dengue}}.
 
 
@@ -124,7 +124,7 @@ As cores indicam niveis de atenção
 \end{description}
 \end{mdframed}
 
- \textbf{Na semana passada:} 3 municípios em nivel amarelo, 2 em laranja e 2 em vermelho.    
+ \textbf{Na semana passada:} 65 municípios em nivel amarelo, 7 em laranja e 12 em vermelho.    
 
 \end{minipage} % End the main body - first page mini page
 
@@ -138,174 +138,174 @@ As cores indicam niveis de atenção
 \includegraphics[width=0.8\textwidth]{RJ/figs/MapaRJ_MetropolitanaI.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas na Regional Metropolitana I }\begin{center}
 \input{RJ/figs/tabregionalRJ_MetropolitanaI.tex}
 \end{center}
-\vspace{0.5cm}\begin{center}
+\small{\hyperlink{vartab}{ver descrição das variáveis}}\vspace{0.5cm}\begin{center}
 \captionof{figure}{Casos notificados de dengue e Índice de menção em midia social sobre dengue na Regional Metropolitana I }\includegraphics[width=1.3\textwidth]{RJ/figs/tweetRJ_MetropolitanaI.png}\end{center}
 \end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
 \begin{mdframed}[style=sidebar,frametitle={}]
-\textbf{Municipios}\begin{itemize}\ysquare Belford Roxo 
-\osquare Duque de Caxias 
+\textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\ysquare Belford Roxo 
+\ysquare Duque de Caxias 
 \ysquare Itaguaí 
 \ysquare Japeri 
-\wsquare Magé 
+\ysquare Magé 
 \ysquare Mesquita 
-\wsquare Nilópolis 
-\osquare Nova Iguaçu 
-\wsquare Queimados 
+\ysquare Nilópolis 
+\ysquare Nova Iguaçu 
+\ysquare Queimados 
 \osquare Rio de Janeiro 
 \ysquare São João de Meriti 
-\wsquare Seropédica 
+\ysquare Seropédica 
 \end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
 \hypertarget{MtII}{\heading{Regional Metropolitana II}}
 \includegraphics[width=0.8\textwidth]{RJ/figs/MapaRJ_MetropolitanaII.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas na Regional Metropolitana II }\begin{center}
 \input{RJ/figs/tabregionalRJ_MetropolitanaII.tex}
 \end{center}
-\vspace{0.5cm}\begin{center}
+\small{\hyperlink{vartab}{ver descrição das variáveis}}\vspace{0.5cm}\begin{center}
 \captionof{figure}{Casos notificados de dengue e Índice de menção em midia social sobre dengue na Regional Metropolitana II }\includegraphics[width=1.3\textwidth]{RJ/figs/tweetRJ_MetropolitanaII.png}\end{center}
 \end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
 \begin{mdframed}[style=sidebar,frametitle={}]
-\textbf{Municipios}\begin{itemize}\ysquare Itaboraí 
+\textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\ysquare Itaboraí 
 \ysquare Maricá 
 \ysquare Niterói 
 \ysquare Rio Bonito 
 \ysquare São Gonçalo 
-\wsquare Silva Jardim 
+\ysquare Silva Jardim 
 \ysquare Tanguá 
 \end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
 \hypertarget{LtrS}{\heading{Regional Litoral Sul}}
 \includegraphics[width=0.8\textwidth]{RJ/figs/MapaRJ_LitoralSul.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas na Regional Litoral Sul }\begin{center}
 \input{RJ/figs/tabregionalRJ_LitoralSul.tex}
 \end{center}
-\vspace{0.5cm}\begin{center}
+\small{\hyperlink{vartab}{ver descrição das variáveis}}\vspace{0.5cm}\begin{center}
 \captionof{figure}{Casos notificados de dengue e Índice de menção em midia social sobre dengue na Regional Litoral Sul }\includegraphics[width=1.3\textwidth]{RJ/figs/tweetRJ_LitoralSul.png}\end{center}
 \end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
 \begin{mdframed}[style=sidebar,frametitle={}]
-\textbf{Municipios}\begin{itemize}\gsquare Angra dos Reis 
-\wsquare Mangaratiba 
+\textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\gsquare Angra dos Reis 
+\ysquare Mangaratiba 
 \gsquare Paraty 
 \end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
 \hypertarget{MdPr}{\heading{Regional Médio Paraíba}}
 \includegraphics[width=0.8\textwidth]{RJ/figs/MapaRJ_MedioParaiba.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas na Regional Médio Paraíba }\begin{center}
 \input{RJ/figs/tabregionalRJ_MedioParaiba.tex}
 \end{center}
-\vspace{0.5cm}\begin{center}
+\small{\hyperlink{vartab}{ver descrição das variáveis}}\vspace{0.5cm}\begin{center}
 \captionof{figure}{Casos notificados de dengue e Índice de menção em midia social sobre dengue na Regional Médio Paraíba }\includegraphics[width=1.3\textwidth]{RJ/figs/tweetRJ_MedioParaiba.png}\end{center}
 \end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
 \begin{mdframed}[style=sidebar,frametitle={}]
-\textbf{Municipios}\begin{itemize}\wsquare Itatiaia 
-\rgsquare Resende 
-\wsquare Porto Real 
-\wsquare Quatis 
+\textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\rsquare Itatiaia 
+\rsquare Resende 
+\ysquare Porto Real 
+\gsquare Quatis 
 \osquare Barra Mansa 
-\ysquare Volta Redonda 
-\wsquare Rio Claro 
-\wsquare Rio das Flores 
+\gsquare Volta Redonda 
+\gsquare Rio Claro 
+\gsquare Rio das Flores 
 \ysquare Valença 
-\wsquare Barra do Piraí 
+\gsquare Barra do Piraí 
 \gsquare Pinheiral 
-\rgsquare Piraí 
+\rsquare Piraí 
 \end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
 \hypertarget{CntS}{\heading{Regional Centro Sul}}
 \includegraphics[width=0.8\textwidth]{RJ/figs/MapaRJ_CentroSul.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas na Regional Centro Sul }\begin{center}
 \input{RJ/figs/tabregionalRJ_CentroSul.tex}
 \end{center}
-\vspace{0.5cm}\begin{center}
+\small{\hyperlink{vartab}{ver descrição das variáveis}}\vspace{0.5cm}\begin{center}
 \captionof{figure}{Casos notificados de dengue e Índice de menção em midia social sobre dengue na Regional Centro Sul }\includegraphics[width=1.3\textwidth]{RJ/figs/tweetRJ_CentroSul.png}\end{center}
 \end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
 \begin{mdframed}[style=sidebar,frametitle={}]
-\textbf{Municipios}\begin{itemize}\wsquare Paracambi 
-\wsquare Mendes 
+\textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\ysquare Paracambi 
+\ysquare Mendes 
 \ysquare Engenheiro Paulo de Frontin 
-\wsquare Miguel Pereira 
+\ysquare Miguel Pereira 
 \ysquare Vassouras 
-\wsquare Paty do Alferes 
-\wsquare Paraíba do Sul 
+\ysquare Paty do Alferes 
+\ysquare Paraíba do Sul 
 \ysquare Comendador Levy Gasparian 
 \osquare Três Rios 
-\wsquare Areal 
-\wsquare Sapucaia 
+\rsquare Areal 
+\ysquare Sapucaia 
 \end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
 \hypertarget{Srrn}{\heading{Regional Serrana}}
 \includegraphics[width=0.8\textwidth]{RJ/figs/MapaRJ_Serrana.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas na Regional Serrana }\begin{center}
 \input{RJ/figs/tabregionalRJ_Serrana.tex}
 \end{center}
-\vspace{0.5cm}\begin{center}
+\small{\hyperlink{vartab}{ver descrição das variáveis}}\vspace{0.5cm}\begin{center}
 \captionof{figure}{Casos notificados de dengue e Índice de menção em midia social sobre dengue na Regional Serrana }\includegraphics[width=1.3\textwidth]{RJ/figs/tweetRJ_Serrana.png}\end{center}
 \end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
 \begin{mdframed}[style=sidebar,frametitle={}]
-\textbf{Municipios}\begin{itemize}\ysquare Petrópolis 
-\wsquare Teresópolis 
-\wsquare São José do Vale do Rio Preto 
-\wsquare Sumidouro 
+\textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\ysquare Petrópolis 
+\ysquare Teresópolis 
+\ysquare São José do Vale do Rio Preto 
+\ysquare Sumidouro 
 \ysquare Nova Friburgo 
-\wsquare Bom Jardim 
-\wsquare Cantagalo 
+\ysquare Bom Jardim 
+\rsquare Cantagalo 
 \ysquare Carmo 
-\wsquare Duas Barras 
-\wsquare Macuco 
+\ysquare Duas Barras 
+\ysquare Macuco 
 \ysquare Cordeiro 
-\wsquare Trajano de Moraes 
-\wsquare Santa Maria Madalena 
-\wsquare São Sebastião do Alto 
+\ysquare Trajano de Moraes 
+\ysquare Santa Maria Madalena 
+\ysquare São Sebastião do Alto 
 \ysquare Guapimirim 
-\wsquare Cachoeiras de Macacu 
+\ysquare Cachoeiras de Macacu 
 \end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
 \hypertarget{BxdL}{\heading{Regional Baixada Litorânea}}
 \includegraphics[width=0.8\textwidth]{RJ/figs/MapaRJ_BaixadaLitoranea.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas na Regional Baixada Litorânea }\begin{center}
 \input{RJ/figs/tabregionalRJ_BaixadaLitoranea.tex}
 \end{center}
-\vspace{0.5cm}\begin{center}
+\small{\hyperlink{vartab}{ver descrição das variáveis}}\vspace{0.5cm}\begin{center}
 \captionof{figure}{Casos notificados de dengue e Índice de menção em midia social sobre dengue na Regional Baixada Litorânea }\includegraphics[width=1.3\textwidth]{RJ/figs/tweetRJ_BaixadaLitoranea.png}\end{center}
 \end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
 \begin{mdframed}[style=sidebar,frametitle={}]
-\textbf{Municipios}\begin{itemize}\ysquare Araruama 
-\wsquare Armação dos Búzios 
+\textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\ysquare Araruama 
+\ysquare Armação dos Búzios 
 \ysquare Arraial do Cabo 
-\wsquare Cabo Frio 
+\ysquare Cabo Frio 
 \ysquare Casimiro de Abreu 
-\wsquare Iguaba Grande 
+\ysquare Iguaba Grande 
 \ysquare Rio das Ostras 
-\wsquare São Pedro da Aldeia 
-\wsquare Saquarema 
+\ysquare São Pedro da Aldeia 
+\ysquare Saquarema 
 \end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
 \hypertarget{Nort}{\heading{Regional Norte}}
 \includegraphics[width=0.8\textwidth]{RJ/figs/MapaRJ_Norte.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas na Regional Norte }\begin{center}
 \input{RJ/figs/tabregionalRJ_Norte.tex}
 \end{center}
-\vspace{0.5cm}\begin{center}
+\small{\hyperlink{vartab}{ver descrição das variáveis}}\vspace{0.5cm}\begin{center}
 \captionof{figure}{Casos notificados de dengue e Índice de menção em midia social sobre dengue na Regional Norte }\includegraphics[width=1.3\textwidth]{RJ/figs/tweetRJ_Norte.png}\end{center}
 \end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
 \begin{mdframed}[style=sidebar,frametitle={}]
-\textbf{Municipios}\begin{itemize}\osquare Macaé 
-\wsquare Conceição de Macabu 
-\wsquare Carapebus 
+\textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\ysquare Macaé 
+\rsquare Conceição de Macabu 
+\ysquare Carapebus 
 \ysquare Quissamã 
-\wsquare São Fidélis 
+\ysquare São Fidélis 
 \ysquare Campos dos Goytacazes 
-\wsquare São João da Barra 
-\wsquare São Francisco de Itabapoana 
+\ysquare São João da Barra 
+\ysquare São Francisco de Itabapoana 
 \end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
 \hypertarget{Nrst}{\heading{Regional Noroeste}}
 \includegraphics[width=0.8\textwidth]{RJ/figs/MapaRJ_Noroeste.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas na Regional Noroeste }\begin{center}
 \input{RJ/figs/tabregionalRJ_Noroeste.tex}
 \end{center}
-\vspace{0.5cm}\begin{center}
+\small{\hyperlink{vartab}{ver descrição das variáveis}}\vspace{0.5cm}\begin{center}
 \captionof{figure}{Casos notificados de dengue e Índice de menção em midia social sobre dengue na Regional Noroeste }\includegraphics[width=1.3\textwidth]{RJ/figs/tweetRJ_Noroeste.png}\end{center}
 \end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
 \begin{mdframed}[style=sidebar,frametitle={}]
-\textbf{Municipios}\begin{itemize}\wsquare Aperibé 
-\wsquare Bom Jesus do Itabapoana 
-\wsquare Cambuci 
-\wsquare Italva 
-\wsquare Itaocara 
+\textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\ysquare Aperibé 
+\ysquare Bom Jesus do Itabapoana 
+\ysquare Cambuci 
+\rsquare Italva 
+\ysquare Itaocara 
 \ysquare Itaperuna 
-\wsquare Laje do Muriaé 
-\wsquare Miracema 
+\ysquare Laje do Muriaé 
+\ysquare Miracema 
 \ysquare Natividade 
-\rgsquare Porciúncula 
-\wsquare Santo Antônio de Pádua 
-\wsquare São José de Ubá 
-\wsquare Varre-Sai 
-\wsquare Cardoso Moreira 
+\rsquare Porciúncula 
+\ysquare Santo Antônio de Pádua 
+\ysquare São José de Ubá 
+\ysquare Varre-Sai 
+\rsquare Cardoso Moreira 
 \end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage
 
 %-----------------------------------------------------------------------------------%	MAIN BODY - THIRD PAGE
@@ -313,7 +313,7 @@ As cores indicam niveis de atenção
  %\begin{minipage}[t]{1\linewidth} % Mini page taking up 100% of the actual page
 
  
-      \hypertarget{municips}{\heading{Resumo da situação epidemiológica da dengue nos municípios de Rio de Janeiro, na semana 13 de 2016}{6pt}}
+      \hypertarget{municips}{\heading{Resumo da situação epidemiológica da dengue nos municípios de Rio de Janeiro, na semana 14 de 2016}{6pt}}
 
       
      \begin{center}
@@ -335,16 +335,17 @@ As cores indicam niveis de atenção
 \hypertarget{vartab}{\heading{Lista das variáveis apresentadas nas tabelas:}}
 
 \begin{description}
-\item[SE =] semana epidemiológica
+\item [SE =] semana epidemiológica
 \item [tweet =] número de tweets indicativos de casos de dengue na cidade
-\item [temp =] média das temperaturas mínimas da semana
-\item [casos =] casos notificados de dengue 
-\item [casos.esp =] número de casos estimados após correção pelo atraso de notificação
-\item [maxcasos =] número máximo de casos estimados (IC 95\%)
-\item [p(Rt1) =] probabilidade do número reprodutivo ser maior que 1 (indica transmissão)
-\item [inc =] incidência por 100.000 habs
-\item [nivel =] nivel do alerta (1 = mais baixo, 4 = mais alto)
-\item [cor =] cor do alerta (verde, amarelo, laranja, vermelho)
+\item [temperatura =] média das temperaturas mínimas da semana
+\item [casos notif =] casos notificados de dengue 
+\item [casos preditos =] número de casos estimados após correção pelo atraso de notificação
+\item [ICmin =] número mínimo de casos estimados (IC 95\%)
+\item [ICmax =] número máximo de casos estimados (IC 95\%)
+\item [Rt] número reprodutivo efetivo ($>$ 1 indica aumento de casos transmissão)
+\item [p(Rt1) =] probabilidade do número reprodutivo ser maior que 1 ($>0.95$ indica aumento significativo de casos)
+\item [inc =] incidência por 100.000 habitantes
+\item [Nivel =] cor do alerta (verde, amarelo, laranja, vermelho)
 \end{description}
 
 \hypertarget{notas}{\heading{Notas}}
